--- a/assignment1/main.css
+++ b/assignment1/main.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     margin: 0;
     padding: 0;
@@ -8,10 +10,20 @@ body{
 }
 
 header{
+    width: 100%;
+    box-sizing: border-box;
+    height: 83px;
+}
+
+header .header{
+    width: 100%;
     background: linear-gradient(45deg, rgb(129, 0, 129), rgb(0, 119, 255), orange );
     display: flex;
     justify-content: space-between;
     padding: 10px 50px;
+    box-sizing: border-box;
+    position: fixed;
+    z-index: 5;
 }
 
 header .logo img{
@@ -61,6 +73,12 @@ aside{
     box-sizing: border-box;
     padding: 20px;
     color: rgb(82, 82, 82);
+    position: relative;
+}
+
+aside div{
+    position: fixed;
+    top: 83px;
 }
 
 aside marquee{
@@ -109,6 +127,15 @@ aside ul li a:hover{
 
 section section{
     margin-top: 50px;
+}
+
+footer ul{
+    list-style: none;
+}
+
+footer ul h5{
+    display: inline-block;
+    margin-bottom: 0;
 }
 
 .main-content section article{
