--- a/assignment1/main.css
+++ b/assignment1/main.css
@@ -143,6 +143,7 @@ aside ul li a:hover{
 .main-content{
     margin: 18px;
     box-sizing: border-box;
+    margin-bottom: 50px;
 }
 
 section section{
